--- a/app/.env
+++ b/app/.env
@@ -17,5 +17,6 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=d3af7f22380a74957ce55827d7967f4a
-APP_DEBUG=0
 ###< symfony/framework-bundle ###
+APP_DEBUG=0
+XDEBUG_TRIGGER=START
