--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
         ports:
             - "180:80"
         volumes:
-            - ./app:/app/
+            - ./app:/var/www/html/app/:rw
         depends_on:
             - app
         container_name: task-ddd-web
@@ -18,5 +18,12 @@ services:
             context: .
             dockerfile: docker/php/Dockerfile
         volumes:
-            - ./app:/app/
+            - ./app:/var/www/html/app/:rw
+            - ./task:/var/www/html/app/var/tmp/task/:rw
         container_name: task-ddd-app
+        env_file:
+            - ./app/.env
+        environment:
+            PHP_IDE_CONFIG: "serverName=localhost"
+        extra_hosts:
+            - "host.docker.internal:host-gateway"
