--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,9 +1,9 @@
 FROM nginx:1.23.3-alpine
 
-# copy the public directory
-COPY ./app/public/ /app/public/
+# Copy the public directory
+COPY ./app/public/ /var/www/html/app/public/
 
-# copy the nginx config file
+# Copy the nginx config file
 COPY ./docker/nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
 # Change user pid, gid
@@ -14,12 +14,12 @@ RUN apk --no-cache add shadow \
     && groupmod -g $GID nginx \
     && apk --purge del shadow
 
-## add permissions for non-root
+## Add permissions for non-root
 RUN chown -R nginx:nginx /var/cache/nginx && \
     chown -R nginx:nginx /var/log/nginx && \
     chown -R nginx:nginx /etc/nginx/conf.d
 RUN touch /var/run/nginx.pid && \
     chown -R nginx:nginx /var/run/nginx.pid
 
-# switch to non-root user
+# Switch to non-root user
 USER nginx
