--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -4,7 +4,7 @@ server {
     server_name _;
     server_tokens off;
 
-    root /app/public;
+    root /var/www/html/app/public;
     index index.php;
 
     location / {
