--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -2,9 +2,6 @@ FROM php:8.1-fpm-alpine
 
 ENV COMPOSER_VERSION=2.5.3
 
-COPY ./app /var/www/html/app
-COPY ./task /var/www/html/app/var/tmp/task
-
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --version=$COMPOSER_VERSION --install-dir=/usr/local/bin --filename=composer
 
@@ -13,14 +10,18 @@ WORKDIR /var/www/html/app
 # Change user pid, gid
 ARG UID=1000
 ARG GID=1000
-RUN apk --no-cache add shadow linux-headers ${PHPIZE_DEPS} \
+
+RUN \
+    # Install build deps
+    apk --no-cache add shadow linux-headers ${PHPIZE_DEPS} --virtual .build-deps \
+    # Change uid and gid
         && usermod -u $UID www-data \
         && groupmod -g $GID www-data \
-        && mkdir /var/www/.composer && chown www-data:www-data /var/www/.composer \
-    # TODO remove linux and phpize and xdebug
+    # Install xdebug
     && pecl install -Z xdebug \
         && docker-php-ext-enable xdebug \
-    && apk --purge del shadow linux-headers ${PHPIZE_DEPS}
+    # Remove build deps
+    && apk --purge del --no-network .build-deps
 
 # Copy php-ini for production area
 RUN cp $PHP_INI_DIR/php.ini-production $PHP_INI_DIR/php.ini
@@ -30,3 +31,7 @@ COPY /docker/php/xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
 # Switch to non-root user
 USER www-data
+
+# Copy project files
+COPY --chown=www-data:www-data ./app /var/www/html/app
+COPY --chown=www-data:www-data ./task /var/www/html/app/var/tmp/task
