--- a/docker/php/xdebug.ini
+++ b/docker/php/xdebug.ini
@@ -1,5 +1,5 @@
 zend_extension=xdebug
-xdebug.start_with_request=yes
+xdebug.start_with_request=trigger
 xdebug.discover_client_host=1
 xdebug.remote_idekey=PHPSTORM
 xdebug.mode=debug
