--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
         ports:
             - "180:80"
         volumes:
-            - ./app:/var/www/html/app/:rw
+            - ./app:/var/www/html/app/
         depends_on:
             - app
         container_name: task-ddd-web
@@ -18,7 +18,7 @@ services:
             context: .
             dockerfile: docker/php/Dockerfile
         volumes:
-            - ./app:/var/www/html/app/:rw
+            - ./app:/var/www/html/app/
         container_name: task-ddd-app
         env_file:
             - ./app/.env
